# scholar-scrape

./: .gitignore  README.md  clean.py  pyproject.toml  scrape.py
