[tool.poetry]
name = "scholar-scrape"
version = "0.1.0"
description = ""
authors = ["Alex <17277800+alex-schaaf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scholar_scrape"}]

[tool.poetry.dependencies]
python = "^3.11"
scholarly = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
